# backend-rest-api

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: cd.yml  ci.yml
draftmaster/api/v1/: router.py
draftmaster/factories/: nondisclosure.py
draftmaster/models/api/contract/: __init__.py  base.py  nondisclosure.py
draftmaster/models/domain/: base.py  contract.py  enum.py  party.py  penalty.py  term.py
draftmaster/services/: context.py  template.py
pactdesk/: logging.py
pactdesk/api/: dependencies.py
pactdesk/models/api/contract/: __init__.py  base.py  management.py  nondisclosure.py
pactdesk/models/domain/: base.py  context.py  contract.py  enum.py  party.py  penalty.py  role.py  term.py
pactdesk/services/: __init__.py  context.py  management.py  nondisclosure.py  template.py
requests/management/: request.json
requests/nondisclosure/: mutual_multi_ee.json  mutual_standard_ee_penalty_term.json  unilateral_multi_ee_penalty_term.json  unilateral_standard_ee.json  unilateral_standard_ee_penalty.json  unilateral_standard_ee_penalty_term.json  unilateral_standard_ee_term.json  unilateral_standard_ep.json  unilateral_standard_pp.json
requests/nondisclosure/mutual/multi/: eee.json  eee_penalty.json  eee_penalty_term.json  eee_term.json
requests/nondisclosure/mutual/standard/: ee.json  ee_penalty.json  ee_penalty_term.json  ee_term.json
requests/nondisclosure/unilateral/multi/: eee.json  eee_penalty.json  eee_penalty_term.json  eee_term.json
requests/nondisclosure/unilateral/standard/: ee.json  ee_penalty.json  ee_penalty_term.json  ee_term.json
templates/general/: agreements.json  considerations.json  parties.json  signatures.json
templates/general/parties/: legal_entity.json  natural_person.json
templates/general/sections/: agreements.json  considerations.json  parties.json  signatures.json
templates/management/agreements/clauses/: business_opportunities.json  company_property.json  confidentiality.json  duration_and_termination.json  execution_of_the_assignment.json  fee_and_expenses.json  indemnification_for_taxes.json  intellectual_property_rights.json  invoicing_and_payment.json  liability.json  miscellaneous.json  termination.json  the_assignment.json
templates/management/considerations/: considerations.json
templates/management/parties/: closing.json
templates/nondisclosure/general/parties/: natural_person.json
templates/nondisclosure/mutual/multi/considerations/: considerations.json
templates/nondisclosure/mutual/multi/parties/: closing.json
templates/nondisclosure/mutual/standard/considerations/: considerations.json
(+50 files in other folders)
